--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-git+https://github.com/AmanoTeam/Pyrogram.git
-tweepy
-youtube-dl
-rich
+git+https://github.com/AmanoTeam/pyrogram@v1.2.9-amn
+tgcrypto>=1.2.2
+tweepy>=3.10.0
+youtube-dl>=2021.6.6
+rich>=10.6.0
